--- a/style.css
+++ b/style.css
@@ -15,14 +15,18 @@ header {
     color: #ffffff;
 }
 
+/* Changed header from class to semantic element in this selector */ 
 header h1 {
     display: inline-block;
     font-size: 48px;
 }
 
+/* Changed header from class to semantic element in this selector */ 
 header h1 .seo {
     color: #d9dcd6;
 }
+/* Changed header from class to semantic element in this selector */ 
+/* Changed div to section for this selector */ 
 
 header section {
     padding-top: 15px;
@@ -32,9 +36,13 @@ header section {
     font-size: 20px;
 }
 
+/* Changed header from class to semantic element in this selector */ 
+
 header section  ul {
     list-style-type: none;
 }
+
+/* Changed header from class to semantic element in this selector */ 
 
 header section ul li {
     display: inline-block;
@@ -188,12 +196,17 @@ p {
     font-size: 36px;
 }
 
+/* changed footer from a class to an element here */
+
 footer {
     padding: 30px;
     clear: both;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     text-align: center;
 }
+
+/* changed footer from a class to an element here */
+/* changed h2 to h4 to keep the sequence */ 
 
 footer h4 {
     font-size: 20px;
